# opencl-maptest

./: CMakeLists.txt  Kernel.cl  main.cpp
nbproject/: configurations.xml  project.xml
